[gd_scene load_steps=15 format=3 uid="uid://ctyjs8a13w3mq"]

[ext_resource type="Script" uid="uid://5cyaq4n8yomc" path="res://game.gd" id="1_7jktm"]
[ext_resource type="Texture2D" uid="uid://btt0w2fvl2v0y" path="res://Blue.png" id="1_sb48q"]
[ext_resource type="Texture2D" uid="uid://ctomum764cfuh" path="res://Terrain (16x16).png" id="2_t88pq"]
[ext_resource type="PackedScene" uid="uid://be66xjlnoqf34" path="res://character.tscn" id="3_r0x5m"]
[ext_resource type="PackedScene" uid="uid://cnti4w2ymeon4" path="res://toy.tscn" id="4_3mrqo"]
[ext_resource type="Script" uid="uid://cq6ld5akvg3ps" path="res://toy.gd" id="6_ryrav"]
[ext_resource type="AudioStream" uid="uid://bcbu337yrvapk" path="res://Iframe Jeremy Blake - Powerup_ â™« NO COPYRIGHT 8-bit Music [l7SwiFWOQqM].mp3" id="7_eow3j"]
[ext_resource type="PackedScene" uid="uid://c46g5fj1knrdh" path="res://coin.tscn" id="8_j5wjh"]
[ext_resource type="AudioStream" uid="uid://eaa7qi3a871x" path="res://Score - Sound Effect for editing.mp3" id="9_vef74"]
[ext_resource type="PackedScene" uid="uid://ys455wqwtvmy" path="res://bird.tscn" id="10_hve3p"]
[ext_resource type="PackedScene" uid="uid://bjdwblq7xoipy" path="res://wind.tscn" id="11_mfdv2"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jw0ju"]
texture = ExtResource("2_t88pq")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
4:0/0 = 0
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:0/0 = 0
12:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:0/0 = 0
13:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:0/0 = 0
14:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:0/0 = 0
15:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:1/0 = 0
12:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:1/0 = 0
13:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:1/0 = 0
14:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:1/0 = 0
15:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/0 = 0
13:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:2/0 = 0
14:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:2/0 = 0
15:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
12:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:4/0 = 0
13:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:4/0 = 0
14:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:4/0 = 0
15:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:4/0 = 0
17:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:4/0 = 0
18:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:4/0 = 0
19:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
20:4/0 = 0
20:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
21:4/0 = 0
21:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
12:5/0 = 0
12:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:5/0 = 0
13:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:5/0 = 0
14:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:5/0 = 0
15:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:5/0 = 0
17:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:5/0 = 0
18:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:5/0 = 0
19:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
20:5/0 = 0
20:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
21:5/0 = 0
21:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
13:6/0 = 0
13:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:6/0 = 0
14:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:6/0 = 0
15:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:6/0 = 0
17:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:6/0 = 0
18:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:6/0 = 0
19:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
6:8/0 = 0
6:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:8/0 = 0
7:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:8/0 = 0
8:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:8/0 = 0
9:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:8/0 = 0
10:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
6:9/0 = 0
6:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:9/0 = 0
7:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:9/0 = 0
8:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:9/0 = 0
9:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:9/0 = 0
10:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
6:10/0 = 0
6:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:10/0 = 0
7:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:10/0 = 0
8:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0

[sub_resource type="TileSet" id="TileSet_2v62t"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_jw0ju")

[sub_resource type="SystemFont" id="SystemFont_ryrav"]
subpixel_positioning = 0

[node name="Game" type="Node2D"]
script = ExtResource("1_7jktm")
coin_scene = ExtResource("8_j5wjh")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -32.0
offset_top = -32.0
offset_right = 1181.0
offset_bottom = 678.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_sb48q")
stretch_mode = 1

[node name="TileMap" type="TileMap" parent="." groups=["avoid"]]
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_2v62t")
format = 2
layer_0/tile_data = PackedInt32Array(1245184, 458752, 0, 1310720, 458752, 1, 1245185, 458752, 0, 1310721, 458752, 1, 1245186, 458752, 0, 1310722, 458752, 1, 1245187, 458752, 0, 1310723, 458752, 1, 1245188, 458752, 0, 1310724, 458752, 1, 1245189, 458752, 0, 1310725, 458752, 1, 1245190, 458752, 0, 1310726, 458752, 1, 1245191, 458752, 0, 1310727, 458752, 1, 1245194, 458752, 0, 1310730, 458752, 1, 1245193, 458752, 0, 1310729, 458752, 1, 1245192, 458752, 0, 1310728, 458752, 1, 1245195, 458752, 0, 1310731, 458752, 1, 1245196, 458752, 0, 1310732, 458752, 1, 1245197, 458752, 0, 1310733, 458752, 1, 1245198, 458752, 0, 1310734, 458752, 1, 1245199, 458752, 0, 1310735, 458752, 1, 1245200, 458752, 0, 1310736, 458752, 1, 1245201, 458752, 0, 1310737, 458752, 1, 1245202, 458752, 0, 1310738, 458752, 1, 1245203, 458752, 0, 1310739, 458752, 1, 1245204, 458752, 0, 1310740, 458752, 1, 1245205, 458752, 0, 1310741, 458752, 1, 1245206, 458752, 0, 1310742, 458752, 1, 1245207, 458752, 0, 1310743, 458752, 1, 1245208, 458752, 0, 1310744, 458752, 1, 1245209, 458752, 0, 1310745, 458752, 1, 1245210, 458752, 0, 1310746, 458752, 1, 1245211, 458752, 0, 1310747, 458752, 1, 1245212, 458752, 0, 1310748, 458752, 1, 1245213, 458752, 0, 1310749, 458752, 1, 1245214, 458752, 0, 1310750, 458752, 1, 1245215, 458752, 0, 1310751, 458752, 1, 1245216, 458752, 0, 1310752, 458752, 1, 1245217, 458752, 0, 1310753, 458752, 1, 1245218, 458752, 0, 1310754, 458752, 1, 1245219, 458752, 0, 1310755, 458752, 1, 196644, 1179648, 6, 262180, 1179648, 4, 327716, 1179648, 5, 393252, 1179648, 6, 458788, 1179648, 4, 524324, 1179648, 5, 589860, 1179648, 6, 655396, 1179648, 4, 720932, 1179648, 5, 786468, 1179648, 6, 852004, 1179648, 4, 917540, 1179648, 5, 983076, 1179648, 6, 262143, 1179648, 6, 327679, 1179648, 4, 393215, 1179648, 5, 458751, 1179648, 6, 524287, 1179648, 4, 589823, 1179648, 5, 655359, 1179648, 6, 720895, 1179648, 4, 786431, 1179648, 5, 851967, 1179648, 6, 917503, 1179648, 4, 196607, 1179648, 5, 131071, 1179648, 4, 65535, 1179648, 6, 131108, 1179648, 5, 65572, 1179648, 4, 36, 1179648, 6, 1048612, 1179648, 4, 1114148, 1179648, 5, 1179684, 1179648, 6, 1310756, 1114112, 6, 1245220, 1114112, 5, 983039, 1179648, 5, 1048575, 1179648, 6, 1114111, 1179648, 4, 1179647, 1179648, 5, 1245183, 1179648, 6, 1310719, 1245184, 5, 1376255, 1245184, 6, 37, 1245184, 6, 65573, 1245184, 4, 131109, 1245184, 5, 38, 1245184, 4, 65574, 1245184, 5, 131110, 1245184, 6, 196645, 1245184, 6, 262181, 1245184, 4, 327717, 1245184, 5, 196646, 1245184, 4, 262182, 1245184, 5, 327718, 1245184, 6, 393253, 1245184, 6, 458789, 1245184, 4, 524325, 1245184, 5, 393254, 1245184, 4, 458790, 1245184, 5, 524326, 1245184, 6, 589861, 1245184, 6, 655397, 1245184, 4, 720933, 1245184, 5, 589862, 1245184, 4, 655398, 1245184, 5, 720934, 1245184, 6, 786469, 1245184, 6, 852005, 1245184, 4, 917541, 1245184, 5, 786470, 1245184, 4, 852006, 1245184, 5, 917542, 1245184, 6, 983077, 1245184, 6, 1048613, 1245184, 4, 1114149, 1245184, 5, 983078, 1245184, 4, 1048614, 1245184, 5, 1114150, 1245184, 6, 1179685, 1245184, 6, 1245221, 1179648, 5, 1310757, 1179648, 6, 1179686, 1245184, 4, 1245222, 1245184, 5, 1310758, 1245184, 6, 65533, 1114112, 4, 131069, 1114112, 5, 196605, 1114112, 6, 65534, 1114112, 6, 131070, 1114112, 4, 196606, 1114112, 5, 262141, 1114112, 4, 327677, 1114112, 5, 393213, 1114112, 6, 262142, 1114112, 6, 327678, 1114112, 4, 393214, 1114112, 5, 458749, 1114112, 4, 524285, 1114112, 5, 589821, 1114112, 6, 458750, 1114112, 6, 524286, 1114112, 4, 589822, 1114112, 5, 655357, 1114112, 4, 720893, 1114112, 5, 786429, 1114112, 6, 655358, 1114112, 6, 720894, 1114112, 4, 786430, 1114112, 5, 851965, 1114112, 4, 917501, 1114112, 5, 983037, 1114112, 6, 851966, 1114112, 6, 917502, 1114112, 4, 983038, 1114112, 5, 1048573, 1114112, 4, 1114109, 1114112, 5, 1179645, 1114112, 6, 1048574, 1114112, 6, 1114110, 1114112, 4, 1179646, 1114112, 5, 1245181, 1114112, 4, 1310717, 1114112, 5, 1376253, 1114112, 6, 1245182, 1114112, 6, 1310718, 1179648, 5, 1376254, 1179648, 6, 1048611, 1114112, 4, 1114147, 1114112, 5, 1179683, 1114112, 6, 852003, 1114112, 4, 917539, 1114112, 5, 983075, 1114112, 6, 655395, 1114112, 4, 720931, 1114112, 5, 786467, 1114112, 6, 458787, 1114112, 4, 524323, 1114112, 5, 589859, 1114112, 6, 262179, 1114112, 4, 327715, 1114112, 5, 393251, 1114112, 6, 65571, 1114112, 4, 131107, 1114112, 5, 196643, 1114112, 6, -131037, 1114112, 4, -65501, 1114112, 5, 35, 1114112, 6, -131036, 1179648, 4, -65500, 1179648, 5, -131035, 1245184, 4, -65499, 1245184, 5, -65538, 1114112, 4, -2, 1114112, 5, -65537, 1179648, 4, -1, 1179648, 5, -131072, 1245184, 4, -65536, 1245184, 5, 0, 1245184, 6, 65536, 1245184, 4, 131072, 1245184, 5, 196608, 1245184, 6, 262144, 1245184, 4, 327680, 1245184, 5, 393216, 1245184, 6, 458752, 1245184, 4, 524288, 1245184, 5, 589824, 1245184, 6, 655360, 1245184, 4, 720896, 1245184, 5, 786432, 1245184, 6, 851968, 1245184, 4, 917504, 1245184, 5, 983040, 1245184, 6, 1048576, 1245184, 4, 1114112, 1245184, 5, 1179648, 1245184, 6, -262146, 1114112, 4, -196610, 1114112, 5, -131074, 1114112, 6, -262145, 1179648, 4, -196609, 1179648, 5, -131073, 1179648, 6, -327680, 1245184, 4, -262144, 1245184, 5, -196608, 1245184, 6, -458754, 1114112, 4, -393218, 1114112, 5, -327682, 1114112, 6, -458753, 1179648, 4, -393217, 1179648, 5, -327681, 1179648, 6, -524288, 1245184, 4, -458752, 1245184, 5, -393216, 1245184, 6, -655362, 1114112, 4, -589826, 1114112, 5, -524290, 1114112, 6, -655361, 1179648, 4, -589825, 1179648, 5, -524289, 1179648, 6, -720896, 1245184, 4, -655360, 1245184, 5, -589824, 1245184, 6, -327645, 1114112, 4, -262109, 1114112, 5, -196573, 1114112, 6, -327644, 1179648, 4, -262108, 1179648, 5, -196572, 1179648, 6, -327643, 1245184, 4, -262107, 1245184, 5, -196571, 1245184, 6, -524253, 1114112, 4, -458717, 1114112, 5, -393181, 1114112, 6, -524252, 1179648, 4, -458716, 1179648, 5, -393180, 1179648, 6, -524251, 1245184, 4, -458715, 1245184, 5, -393179, 1245184, 6, -720861, 1114112, 4, -655325, 1114112, 5, -589789, 1114112, 6, -720860, 1179648, 4, -655324, 1179648, 5, -589788, 1179648, 6, -720859, 1245184, 4, -655323, 1245184, 5, -589787, 1245184, 6, -851970, 1114112, 4, -786434, 1114112, 5, -720898, 1114112, 6, -851969, 1179648, 4, -786433, 1179648, 5, -720897, 1179648, 6, -917504, 1245184, 4, -851968, 1245184, 5, -786432, 1245184, 6, -917503, 1114112, 4, -851967, 1114112, 5, -786431, 1114112, 6, -917502, 1179648, 4, -851966, 1179648, 5, -786430, 1179648, 6, -917501, 1245184, 4, -851965, 1245184, 5, -786429, 1245184, 6, -917500, 1114112, 4, -851964, 1114112, 5, -786428, 1114112, 6, -917499, 1179648, 4, -851963, 1179648, 5, -786427, 1179648, 6, -917498, 1245184, 4, -851962, 1245184, 5, -786426, 1245184, 6, -917497, 1114112, 4, -851961, 1114112, 5, -786425, 1114112, 6, -917496, 1179648, 4, -851960, 1179648, 5, -786424, 1179648, 6, -917495, 1245184, 4, -851959, 1245184, 5, -786423, 1245184, 6, -917494, 1114112, 4, -851958, 1114112, 5, -786422, 1114112, 6, -917493, 1179648, 4, -851957, 1179648, 5, -786421, 1179648, 6, -917492, 1245184, 4, -851956, 1245184, 5, -786420, 1245184, 6, -917491, 1114112, 4, -851955, 1114112, 5, -786419, 1114112, 6, -917490, 1179648, 4, -851954, 1179648, 5, -786418, 1179648, 6, -917489, 1245184, 4, -851953, 1245184, 5, -786417, 1245184, 6, -917488, 1114112, 4, -851952, 1114112, 5, -786416, 1114112, 6, -917487, 1179648, 4, -851951, 1179648, 5, -786415, 1179648, 6, -917486, 1245184, 4, -851950, 1245184, 5, -786414, 1245184, 6, -917485, 1114112, 4, -851949, 1114112, 5, -786413, 1114112, 6, -917484, 1179648, 4, -851948, 1179648, 5, -786412, 1179648, 6, -917483, 1245184, 4, -851947, 1245184, 5, -786411, 1245184, 6, -917482, 1114112, 4, -851946, 1114112, 5, -786410, 1114112, 6, -917481, 1179648, 4, -851945, 1179648, 5, -786409, 1179648, 6, -917480, 1245184, 4, -851944, 1245184, 5, -786408, 1245184, 6, -917479, 1114112, 4, -851943, 1114112, 5, -786407, 1114112, 6, -917478, 1179648, 4, -851942, 1179648, 5, -786406, 1179648, 6, -917477, 1245184, 4, -851941, 1245184, 5, -786405, 1245184, 6, -917476, 1114112, 4, -851940, 1114112, 5, -786404, 1114112, 6, -917475, 1179648, 4, -851939, 1179648, 5, -786403, 1179648, 6, -917474, 1245184, 4, -851938, 1245184, 5, -786402, 1245184, 6, -917473, 1114112, 4, -851937, 1114112, 5, -786401, 1114112, 6, -917472, 1179648, 4, -851936, 1179648, 5, -786400, 1179648, 6, -917471, 1245184, 4, -851935, 1245184, 5, -786399, 1245184, 6, -917470, 1114112, 4, -851934, 1114112, 5, -786398, 1114112, 6, -917469, 1114112, 4, -851933, 1114112, 5, -786397, 1114112, 6, -917468, 1179648, 4, -851932, 1179648, 5, -786396, 1179648, 6, -917467, 1245184, 4, -851931, 1245184, 5, -786395, 1245184, 6)

[node name="character" parent="." instance=ExtResource("3_r0x5m")]
position = Vector2(608, 569)

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 43.0
offset_right = 251.0
offset_bottom = 106.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30

[node name="toy" parent="." groups=["toy"] instance=ExtResource("4_3mrqo")]
position = Vector2(604, 144)
center_of_mass_mode = 1
center_of_mass = Vector2(0, 20.21)
script = ExtResource("6_ryrav")

[node name="BgMusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_eow3j")
parameters/looping = true

[node name="Coin" parent="." groups=["avoid"] instance=ExtResource("8_j5wjh")]
position = Vector2(1022, 494)
script = null

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_vef74")

[node name="Bird" parent="." groups=["avoid"] instance=ExtResource("10_hve3p")]
position = Vector2(1294, 141)

[node name="GameOver" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_top = 6.0
offset_right = 40.0
offset_bottom = 46.0

[node name="Panel" type="Panel" parent="GameOver"]
layout_mode = 0
offset_left = -164.0
offset_top = -58.0
offset_right = 1370.0
offset_bottom = 756.0

[node name="Label" type="Label" parent="GameOver"]
layout_mode = 0
offset_left = 33.0
offset_top = 204.0
offset_right = 1119.0
offset_bottom = 382.0
theme_override_fonts/font = SubResource("SystemFont_ryrav")
theme_override_font_sizes/font_size = 50
text = "Game Over"
horizontal_alignment = 1

[node name="PlayAgain" type="Button" parent="GameOver"]
process_mode = 3
layout_mode = 0
offset_left = 519.0
offset_top = 366.0
offset_right = 627.0
offset_bottom = 402.0
theme_override_font_sizes/font_size = 20
text = "Play Again"

[node name="Wind" parent="." instance=ExtResource("11_mfdv2")]
position = Vector2(598, 270)

[connection signal="body_entered" from="toy" to="." method="_on_toy_body_entered"]
[connection signal="body_entered" from="Coin" to="." method="_on_coin_body_entered"]
[connection signal="pressed" from="GameOver/PlayAgain" to="." method="_on_play_again_pressed"]
